Added support for multi worlds